feat : crawler - scraper get title, links and class names
